# credit_risk_project

./: .gitattributes  .gitignore  README.md  eda.ipynb  pyproject.toml
data/: mortgage_dataset_card.md
