[project]
name = "credit-risk-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "missingno>=0.5.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "pandera>=0.31.1",
    "plotly>=5.22",
    "pygam>=0.12.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "seaborn>=0.13",
    "xgboost>=2.1",
]
